--- a/CSCore.OSX.Test/CSCore.OSX.Test.csproj
+++ b/CSCore.OSX.Test/CSCore.OSX.Test.csproj
@@ -32,8 +32,8 @@
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.3.2.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="MonoMac">
-      <HintPath>..\CSCore.OSX\lib\MonoMac.dll</HintPath>
+    <Reference Include="Xamarin.Mac">
+      <HintPath>..\CSCore.OSX\lib\Xamarin.Mac.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
